# image-text-edit

./: .gitignore  README.md
docs/superpowers/plans/: 2026-07-12-edit-chart-text-skill.md  2026-07-14-substring-replacement.md
docs/superpowers/specs/: 2026-07-12-edit-chart-text-skill-design.md  2026-07-14-substring-replacement-design.md
skills/edit-chart-text/: .gitignore  SKILL.md  pyproject.toml
skills/edit-chart-text/agents/: openai.yaml
skills/edit-chart-text/references/: troubleshooting.md
skills/edit-chart-text/src/edit_chart_text/: __init__.py  cli.py  matching.py  models.py  ocr.py  pipeline.py  render.py  repair.py  request_io.py  style.py  validate.py
skills/edit-chart-text/tests/: conftest.py  test_atomic_publish.py  test_cli.py  test_confirmed_labels.py  test_final_quality.py  test_hardening.py  test_image_editing.py  test_matching.py  test_models.py  test_ocr.py  test_package.py  test_pipeline.py  test_publish_cli.py  test_real_fixture.py  test_request_io.py  test_substring_post_ocr_punctuation.py
skills/edit-chart-text/tests/fixtures/: chart_sample_request.json
