[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "edit-chart-text"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "opencv-python-headless>=4.10",
    "Pillow>=11.0",
    "paddleocr>=3.0",
    "paddlepaddle>=3.0,<4",
    "filelock>=3.16,<4",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
edit-chart-text = "edit_chart_text.cli:main"

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: opt-in tests that run real OCR models and may download model files",
]

[tool.setuptools.packages.find]
where = ["src"]
